# rover-Autonomy

./: .gitignore  README.md
auto_ws/src/auto_pkg/: CMakeLists.txt  package.xml
auto_ws/src/auto_pkg/launch/: astra_auto_launch.py
auto_ws/src/auto_pkg/scripts/: action_client.py  aruco_detector.py
auto_ws/src/auto_pkg/src/: anakoinosi.cpp  anakoinosi.h  hippocampus.cpp  hippocampus.h  pathfind.h  scn.cpp  scn.h  server.cpp  starter_client.cpp
auto_ws/src/clucky_interfaces/: CMakeLists.txt  package.xml
auto_ws/src/clucky_interfaces/msg/: CoreFeedback.msg
ros2_ws/src/actions_cpp/: CMakeLists.txt  README.txt  package.xml
ros2_ws/src/actions_cpp/URDF/: clucky.xml
ros2_ws/src/actions_cpp/src/: aruco.cpp  astra_auto_client.cpp  astra_auto_server.cpp  count_until_client.cpp  count_until_server.cpp  old_aruco.cpp  pathfind.h
ros2_ws/src/astra_auto_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/astra_auto_interfaces/action/: NavigateRover.action
ros2_ws/src/astra_auto_interfaces/msg/: feedback.msg
ros2_ws/src/clucky_auto_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/clucky_auto_bringup/launch/: demo.launch.py
ros2_ws/src/obj_detect/: package.xml  setup.py
ros2_ws/src/obj_detect/obj_detect/: obj_detect.py
